src/snapshots/bevy_state_plugin_generator__tests__apply_naming_scheme@nested_example_Short.snap
---
source: src/tests.rs
expression: "nodes.into_iter().map(|node|\nformat!(\"{} -> {}\", node.name, node.resolved_name.unwrap())).collect_vec()"
---
[
    "RootState -> RootState",
    "Menu -> RootStateMenu",
    "Options -> MenuOptions",
    "Audio -> OptionsAudio",
    "Video -> OptionsVideo",
]
