src/snapshots/bevy_state_plugin_generator__tests__apply_naming_scheme@single_node_None.snap
---
source: src/tests.rs
expression: "nodes.into_iter().map(|node|\nformat!(\"{} -> {}\", node.name, node.resolved_name.unwrap())).collect_vec()"
---
[
    "RootState -> RootState",
]
